# StarDust

./: .gitignore  .gitmodules  CLAUDE.md
.github/workflows/: build.yml
fl-studio-plugin/: .gitignore  CMakeLists.txt
fl-studio-plugin/installer/: build-macos-installer.sh  build-windows-installer.bat
fl-studio-plugin/src/: PluginEditor.cpp  PluginEditor.h
fl-studio-plugin/src/dsp/: BitCrusher.cpp  ButterworthFilter.cpp  DetuneEngine.cpp  DetuneEngine.h  GranularEngine.cpp  Saturation.cpp
fl-studio-plugin/src/gui/: StarfieldBackground.cpp  StarfieldBackground.h
installer/: build_installer.sh
stardust/: CMakeLists.txt
stardust/assets/: Stardust.icns
stardust/installer/: StarDust-installer.iss  Stardust-installer.iss  build-macos-installer.sh  build-windows-installer.bat
stardust/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
stardust/src/dsp/: BitCrusher.cpp  BitCrusher.h  ButterworthFilter.cpp  ButterworthFilter.h  CharacterMacro.h  ChorusEngine.cpp  ChorusEngine.h  DattorroReverb.cpp  DattorroReverb.h  DestroyDrive.cpp  DestroyDrive.h  FastMath.h  GrainEnvelopeLUT.h  GranularEngine.cpp  GranularEngine.h  HalfBandDecimator.h  HalfTimeEngine.cpp  HalfTimeEngine.h  HarmonicExciter.cpp  HarmonicExciter.h  InputEnvelopeFollower.h  ModulationMatrix.h  MultiplyEngine.cpp  MultiplyEngine.h  Oscillator.h  PitchShifter.cpp  PitchShifter.h  ReverserEngine.cpp  ReverserEngine.h  Saturation.cpp  Saturation.h  StutterEngine.cpp  StutterEngine.h  TapeEngine.cpp  TapeEngine.h
stardust/src/gui/: PresetLibraryPanel.cpp  PresetLibraryPanel.h  StarfieldBackground.cpp  StarfieldBackground.h
stardust/src/presets/: AbstractPresets.cpp  AtmospherePresets.cpp  FactoryPresets.cpp  FactoryPresets.h  GlitchPresets.cpp  GrainsPresets.cpp  LoFiPresets.cpp  TapePresets.cpp
